fix lint warning and auth test